--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Responsabilidad Social - USMP</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -17,6 +18,26 @@
 		</div>
 	</div>
 </aside>
+<header>
+	<figure>
+		<img src="img/logo.png" alt="Responsabilidad Social">
+	</figure>	
+	<div id="buscador">
+		<input type="search">
+	</div>
+</header>
+<nav id="menu">
+	<ul>
+		<li><a href="#" alt="#">¿QUIÉNES SOMOS?</a></li>
+		<li><a href="#" alt="#">¿QUÉ HACEMOS?</a></li>
+		<li><a href="#" alt="#">PROYECTOS</a></li>
+		<li><a href="#" alt="#">PUBLICACIONES</a></li>
+		<li><a href="#" alt="#">NOTICIAS Y EVENTOS</a></li>
+		<li><a href="#" alt="#">CONTÁCTENOS</a></li>
+	</ul>
+
+</nav>
+
 
 
 
