--- a/index.html
+++ b/index.html
@@ -35,10 +35,37 @@
 		<li><a href="#" alt="#">NOTICIAS Y EVENTOS</a></li>
 		<li><a href="#" alt="#">CONTÁCTENOS</a></li>
 	</ul>
-
 </nav>
+<div id="slider">
+	<img src="img/img_silider.png" alt="slider 1"/>
+</div>
+<section id="contenido">
+	<div id="izq">
+		<div id="titulo">
+			<span class="linea"> </span><h2> NOTICIAS </h2><span class="linea"> </span>
+		</div>
+
+		<div id="noti1">
+
+		</div>
+
+		<div id="noti2">
+
+		</div>
+
+		<div id="noti3">
+
+		</div>
+	</div>
 
 
+
+
+
+
+	<div id="der">
+	</div>
+</section>
 
 
 
