--- a/index.html
+++ b/index.html
@@ -144,25 +144,13 @@
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 			</span>
 		</div>
-		<!-- VIDEOS -->
-		<div id="videos"> 
-
-		</div>
-
-		<!-- lo mas visto -->
-		<div id="masVisto">
-
-		</div>
+		
 
 
-	</div>
+	</div>  <!-- Fin parte izquierda -->
 
 
-
-
-
-
-
+ 	<!-- Inicio derecha -->
 	<div id="der">
 		<div id="eventos">
 			<p id="textoEven">Eventos</p>
@@ -207,20 +195,81 @@
 
 		</div>
 	</div>
+
+	
 </section>
 
 
 
 
-
-
-
-
-
-
-
-
 </div>
+<!-- VIDEOS -->
+	<div id="videos"> 
+		<div class="centro">
+			<p class="textoVi">VIDEOS</p>	
+			<img src="img/imgVideo.png" alt="video" />
+		</div>
+	</div>
+
+	<!-- lo mas visto -->
+	<div id="masVisto">
+		<div class="centro">
+			<p class="textoVi"><span id="span"></span>LO MÁS VISTO</p>	
+			<div id="visto">
+				<div class="vista">
+					<ul class="lista">
+						<li>Item 1
+						</li>
+						<li>Item 2
+						</li>
+						<li>Item 3
+						</li>
+						<li>Item 4
+						</li>
+					</ul>
+				</div>
+				<div class="vista">
+					<ul class="lista">
+						<li>Item 1
+						</li>
+						<li>Item 2
+						</li>
+						<li>Item 3
+						</li>
+						<li>Item 4
+						</li>
+					</ul>
+				</div>
+				<div class="vista">
+					<ul class="lista">
+						<li>Item 1
+						</li>
+						<li>Item 2
+						</li>
+						<li>Item 3
+						</li>
+						<li>Item 4
+						</li>
+					</ul>
+				</div>
+				<div class="vista" id="view">
+					<p id="texto">Comité de Responsabilidad <br>Empresarial </p>
+
+					<ul class="lista">
+						<li> <img src="img/phone.png"> Item 1
+						</li>
+						<li>Item 2
+						</li>
+						<li>Item 3
+						</li>
+						<li>Item 4
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</div>
 
 
 </body>
